fixed horizontal scroll

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -129,7 +129,7 @@
   }
 
   .dynamic-text-lg {
-    font-size: 1.15vw;
+    font-size: calc(8px + .5vw);
   }
 
   .dynamic-text {
@@ -137,10 +137,14 @@
   }
 
   .dynamic-text-sm {
-    font-size: .9vw;
+    font-size: calc(8px + .5vw);
   }
 
   .dynamic-text-xs {
     font-size: calc(8px + .5vw);
   }
 
+  .x-scroller{
+    overflow-x: auto; 
+    overflow-y: hidden;
+}
